# SL

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  foundry.toml  package.json
.github/workflows/: deploy-testnet.yml  integration.yml  noir.yml  python-sdk.yml  release.yml  rust.yml  sdk.yml  security.yml  solidity.yml
certora/conf/: BridgeAdapters.conf  ComplianceOracle.conf  GovernanceTimelock.conf  MultiSigGovernance.conf  NullifierRegistry.conf  PrivacyPool.conf  RelayerFeeVault.conf
certora/specs/: BridgeAdapters.spec  ComplianceOracle.spec  GovernanceTimelock.spec  MultiSigGovernance.spec  NullifierRegistry.spec  PrivacyPool.spec  RelayerFeeVault.spec
contracts/bridges/: AuroraRainbowAdapter.sol  AvaxWarpAdapter.sol  IbcBridgeAdapter.sol  TeleporterAdapter.sol  XcmBridgeAdapter.sol
contracts/core/: ComplianceOracle.sol  EmergencyPause.sol  EpochManager.sol  GovernanceTimelock.sol  MultiSigGovernance.sol  PrivacyPool.sol  RelayerFeeVault.sol  StealthAnnouncer.sol  UniversalNullifierRegistry.sol
contracts/governance/: README.md
contracts/interfaces/: IBridgeAdapter.sol  IComplianceOracle.sol  IEpochManager.sol  IPrivacyPool.sol  IProofVerifier.sol
contracts/libraries/: DomainNullifier.sol  MerkleTree.sol  PoseidonHasher.sol  ProofEnvelope.sol  StealthAddress.sol  TransientStorage.sol
contracts/privacy/: README.md
contracts/verifiers/: Halo2SnarkVerifier.sol  UltraHonkVerifier.sol
cosmwasm/contracts/privacy-pool/: Cargo.toml
cosmwasm/contracts/privacy-pool/src/: contract.rs  error.rs  lib.rs  msg.rs  poseidon.rs  state.rs
cosmwasm/contracts/privacy-pool/tests/: integration.rs
deployments/astar/: addresses.json
deployments/aurora/: addresses.json
deployments/avalanche/: addresses.json
deployments/evmos/: addresses.json
deployments/moonbeam/: addresses.json
docker/: Dockerfile.lumora  Dockerfile.relayer  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: lumora.json  relayer.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docs/: ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  GETTING_STARTED.md  GOVERNANCE_PARAMETERS.md  THREAT_MODEL.md
docs/decisions/: 0001-nullifier-domain-separation-v2.md  0002-proof-system-selection.md  0003-mev-protection-commit-reveal.md  0004-bridge-trust-model.md  README.md
docs/design/: MEV_PROTECTION.md
docs/operations/: KEY_MANAGEMENT.md  RUNBOOK.md
ink/privacy-pool/: Cargo.toml  lib.rs
lumora-coprocessor/: Cargo.toml
lumora-coprocessor/src/: chains.rs  circuits.rs  lib.rs  main.rs  proof.rs  submitter.rs  types.rs
monitoring/: alerts.yml
near/contracts/privacy-pool/: Cargo.toml
near/contracts/privacy-pool/src/: hash.rs  lib.rs  types.rs  verifier.rs
noir/circuits/deposit/: Nargo.toml
noir/circuits/deposit/src/: main.nr
noir/circuits/nullifier_check/: Nargo.toml
noir/circuits/nullifier_check/src/: main.nr
noir/circuits/stealth/: Nargo.toml
noir/circuits/stealth/src/: main.nr
noir/circuits/transfer/: Nargo.toml
noir/circuits/transfer/src/: main.nr
noir/circuits/withdraw/: Nargo.toml
noir/circuits/withdraw/src/: main.nr
pallets/privacy-pool/: Cargo.toml
pallets/privacy-pool/src/: benchmarking.rs  lib.rs  tests.rs  types.rs  verifier.rs  weights.rs  xcm_handler.rs
relayer/: Cargo.toml  config.example.toml
relayer/src/: aggregator.rs  config.rs  dispatcher.rs  health.rs  lib.rs  main.rs  metrics.rs  watcher.rs
relayer/src/adapters/: awm.rs  ibc.rs  mod.rs  rainbow.rs  xcm.rs
relayer/src/core/: mod.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: E2EIntegration.s.sol  VerifyDeployment.s.sol
scripts/deploy/: DeployAstar.s.sol  DeployAurora.s.sol  DeployAvalanche.s.sol  DeployEvmos.s.sol  DeployMoonbeam.s.sol  deploy-cosmwasm.sh  deploy-ink.sh  deploy-near.sh
sdk/: package.json  tsconfig.json  typedoc.json
sdk/src/: client.ts  fees.ts  index.ts  prover.ts  router.ts  stealth.ts  subgraph.ts  wallet.ts
sdk/src/__tests__/: client.test.ts  fees.test.ts  prover.test.ts  router.test.ts  stealth.test.ts  subgraph.test.ts  wallet.test.ts
sdk/src/chains/: index.ts
sdks/python/: README.md  pyproject.toml
sdks/python/src/soul_privacy/: __init__.py  client.py  cosmwasm_client.py  near_client.py  poseidon.py  prover.py  substrate_client.py  types.py  wallet.py
sdks/python/tests/: test_client.py  test_prover.py  test_wallet.py
sdks/typescript/: README.md
subgraph/: configure.sh  networks.json  schema.graphql  subgraph.template.yaml  subgraph.yaml
subgraph/src/: epoch-manager.ts  governance.ts  privacy-pool.ts
test/: BridgeAdapters.t.sol  ComplianceOracle.t.sol  CrossChainRelay.t.sol  EpochManager.t.sol  GasBenchmark.t.sol  GovernancePauseStealth.t.sol  InvariantPrivacyPool.t.sol  Libraries.t.sol  MultiSigGovernance.t.sol  NewContracts.t.sol  PrivacyPool.t.sol  ProofEnvelope.t.sol  RelayerFeeVault.t.sol  StealthAddress.t.sol  StealthAnnouncer.t.sol  TransientStorage.t.sol  UniversalNullifierRegistry.t.sol
test/fork/: ForkDeploy.t.sol
test/fuzz/: DomainNullifierFuzz.t.sol  MerkleTreeFuzz.t.sol  PoseidonFuzz.t.sol  PrivacyPoolFuzz.t.sol
test/integration/: Lifecycle.t.sol
test/unit/: EpochManager.t.sol  GovernanceTimelock.t.sol  PoseidonHasher.t.sol  UltraHonkVerifier.t.sol
