[package]
name = "soul-relayer"
version = "0.1.0"
edition = "2021"
description = "Cross-chain privacy relayer for Soul Privacy Stack"
license = "MIT"

[[bin]]
name = "soul-relayer"
path = "src/main.rs"

[lib]
name = "soul_relayer"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["ws", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hex = "0.4"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
async-trait = "0.1"
