[package]
name = "pallet-privacy-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Substrate pallet for ZK privacy pool — ZAseon + Lumora integration"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
frame-support = { version = "34.0.0", default-features = false }
frame-system = { version = "34.0.0", default-features = false }
sp-core = { version = "33.0.0", default-features = false }
sp-runtime = { version = "37.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-io = { version = "36.0.0", default-features = false }

# Benchmarking (optional)
frame-benchmarking = { version = "34.0.0", default-features = false, optional = true }

# XCM for cross-parachain privacy
xcm = { version = "12.0.0", default-features = false, optional = true }

[dev-dependencies]
sp-io = "36.0.0"

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
xcm-support = ["xcm"]
