[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-privacy-sdk"
version = "0.1.0"
description = "Python SDK for the Soul Privacy Stack — multi-chain ZK privacy middleware"
authors = [{ name = "Soul Privacy Team" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "web3>=7.0.0",
    "eth-abi>=5.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_mode = "auto"
