[package]
name = "privacy-pool-cosmwasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CosmWasm privacy pool contract for Cosmos-based chains (Evmos, Osmosis)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2.0", features = ["staking"] }
cosmwasm-schema = "2.0"
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
cosmwasm-std = { version = "2.0", features = ["staking"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
